# DragonShard

./: .bandit  .codecov.yml  .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  api.py  docker-compose.test.yml  docker-compose.yml  dragonshard.db  pyproject.toml  requirements.lock.txt  test_visualization.py
.github/workflows/: ci-fast.yml  ci.yml
data/: init.sql
docs/: privilege_handling.md  uv_setup.md  websocket_setup.md
docs/diagrams/: db_diagram_summary.json  db_er_diagram.dot  diagram_summary.json  er_diagram.dot  module_diagram.dot
dragonshard/: __main__.py
dragonshard/api/: __init__.py  app.py  config.py  models.py  websocket_manager.py
dragonshard/api/endpoints/: __init__.py  attacks.py  export.py  fuzzing.py  genetic_algorithm.py  network.py  reverse_shells.py  sessions.py  vulnerabilities.py  websites.py
dragonshard/api_inference/: README.md  __init__.py  auth_detector.py  crawler.py  js_crawler.py  schema_infer.py  test_crawlers.py  unified_crawler.py  web_crawler.py
dragonshard/core/: config.py  main.py  scanner_service.py  test_utils.py  utils.py
dragonshard/data/: README.md  __init__.py  database.py  models.py  session_manager_db.py  state_graph_db.py
dragonshard/data/migrations/: env.py
dragonshard/executor/: executor.py  reverse_shell.py  session_manager.py  state_graph.py
dragonshard/exploits/: command_injection_exploiter.py  metasploit_bridge.py  poc_runner.py  searcher.py
dragonshard/fuzzing/: __init__.py  anomaly_detector.py  benchmark.py  fuzzer.py  genetic_mutator.py  mutators.py  payloads.json  performance_metrics.py  prng.py  response_analyzer.py
dragonshard/planner/: attack_strategies.py  chain_planner.py  vulnerability_prioritization.py
dragonshard/planner/prompts/: base_prompt.txt
dragonshard/recon/: admin_nmap.py  banner_grabber.py  scanner.py
dragonshard/scripts/: run_metasploit.sh  test_full_workflow.py  test_live_attacks.py  test_reverse_shell_demo.py
dragonshard/tests/: test_chain_planner.py  test_command_injection_exploitation.py  test_crawlers.py  test_docker_scanner.py  test_executor.py  test_executor_stress.py  test_fuzzing.py  test_genetic_fuzzer.py  test_genetic_fuzzer_integration.py  test_genetic_mutator.py  test_genetic_visualization.py  test_live_attacks.py  test_mutation_tree.py  test_recon.py  test_response_analyzer.py  test_reverse_shell.py  test_scanner.py  test_visualization.py  test_web_fuzzing_viz.py
dragonshard/visualizer/: MIGRATION_README.md  MIGRATION_SUMMARY.md  README.md  __init__.py  genetic_tree_integration.py  genetic_viz.py  graph_renderer.py  mutation_tree.py  start_dev.py  ui.py  web_fuzzing_viz.py
dragonshard/visualizer/api/: __init__.py  app.py  models.py
dragonshard/visualizer/frontend/: package-lock.json  package.json  (+2 more)
examples/: web_fuzzing_demo.py
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
scripts/: demo_command_injection_exploitation.py  demo_database.py  demo_diagrams.py  generate_db_er_diagram.py  generate_diagrams.py  generate_dragonshard_structure.py  lint.py  manage_db.py  reset_databases.py  run_benchmarks.py  run_docker_tests.py  setup-nixos.sh  setup_ci.py  start_test_env.sh  test_database.py  test_executor_integration.py  test_executor_stress_integration.py  test_mutation_tree.py  test_planner_integration.py  test_privileged_scanner.py  test_reset_databases.py  test_visualization.py  test_visualization_api.py  test_web_crawling.py  test_web_fuzzing_viz.py  test_websocket_support.py  web_crawl_discovery.py
test-env/: Dockerfile.vuln-node  Dockerfile.vuln-php  Dockerfile.vuln-python  Dockerfile.vuln-stress-test  README.md  init.sql
test-env/reverse-shell-test/: Dockerfile  README.md  docker-compose.yml  generate_payload.py  test_reverse_shell.sh  vulnerable_app.py
test-env/vuln-node/: app.js  package.json
test-env/vuln-php/: index.php
test-env/vuln-python/: app.py  requirements.txt
test-env/vuln-stress-test/: app.py  requirements.txt
(+39 files in other folders)
