[project]
name = "dragonshard"
version = "0.1.0"
description = "Autonomous vulnerability chaining and attack platform."
authors = [{name = "Henry Post", email = "henryfbp@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "python-nmap>=0.7.1",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["data/"]

[tool.ruff.lint]
extend-select = ["I", "E", "F", "W"]
ignore = ["E501", "F841", "F401"]

[tool.pytest.ini_options]
testpaths = ["dragonshard/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["dragonshard"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
